[metadata]
name = qlfhosts
version = 0.0.1
author = Roberto Assef
author_email = roberto.assef@mail.udp.cl
description = Host galaxy effects on AGN Selection in LSST.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rjassef/qlf-host-contamination
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    #License :: OSI Approved :: MIT License
    #Operating System :: OS Independent

#[options]
#package_dir =
#    = src
#packages = find:
#python_requires = >=3.6
#
#[options.packages.find]
#where = src
